--- a/mappings_new/paperflies_mapping.json
+++ b/mappings_new/paperflies_mapping.json
@@ -15,8 +15,8 @@
       "room": "amenities.room"
     },
     "images": {
-      "rooms": "images.rooms",
-      "site": "images.site",
+      "rooms": null,
+      "site": null,
       "amenities": null
     },
     "booking_conditions": "booking_conditions"
